# HF-Miner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: .info  README.md  build.yml  ci.yml  memcheck.yml  quality.yml  test.yml
benchmark/: CMakeLists.txt
benchmark/SHA256/: CMakeLists.txt  benchmark_sha256.cpp
benchmark/sha256/: CMakeLists.txt  benchmark_sha256.cpp
cmake/: Benchmarking.cmake  Coverage.cmake  Cppcheck.cmake  Doxygen.cmake  FTXUI.cmake  Format.cmake  Memcheck.cmake  Spdlog.cmake  Testing.cmake
scripts/linux/: benchmark.sh  memcheck.sh
scripts/windows/: benchmark.bat
src/: CMakeLists.txt  main.cpp
src/Block/: CMakeLists.txt  block.cpp
src/Block/Block/: block.h
src/Main/: CMakeLists.txt  main.cpp
src/SHA256/: CMakeLists.txt  sha256.cpp
src/SHA256/SHA256/: sha256.h
src/block/: CMakeLists.txt  block.cpp  blockHeader.cpp
src/block/block/: block.h  blockHeader.h
src/main/: CMakeLists.txt  main.cpp
src/sha256/: CMakeLists.txt  sha256.cpp
src/sha256/sha256/: sha256.h
src/types/: CMakeLists.txt  bitArray.cpp
src/types/types/: bitArray.h  types.h
src/ui/: CMakeLists.txt  homepage.cpp
src/ui/ui/: homepage.h
src/util/: CMakeLists.txt  endian.cpp  transcode.cpp
src/util/util/: endian.h  transcode.h
test/: CMakeLists.txt
test/Block/: CMakeLists.txt  test_block.cpp
test/SHA256/: CMakeLists.txt  test_sha256.cpp
test/block/: CMakeLists.txt  test_block.cpp  test_blockHeader.cpp
test/sha256/: CMakeLists.txt  test_sha256.cpp
test/util/: CMakeLists.txt  test_endian.cpp  test_transcode.cpp
tools/parser/: CMakeLists.txt  README.md  blockheader_parser.cpp  test_header.txt
tools/parser/resource/: test_header.txt
